--- a/index.html
+++ b/index.html
@@ -1,9 +1,98 @@
 <html>
     <head>
+        <title>Evo Chess</title>
+        <script type="text/javascript" src="jquery-1.10.2.min.js"></script>
         <script type="text/javascript" src="game.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        Hello :)
+        <h1>Evo Chess</h1>
+        <div id="container">
+            <div id="board">
+                <div id="row8" class="row">
+                    <div id="8a" class="square"></div>
+                    <div id="8b" class="square"></div>
+                    <div id="8c" class="square"></div>
+                    <div id="8d" class="square"></div>
+                    <div id="8e" class="square"></div>
+                    <div id="8f" class="square"></div>
+                    <div id="8g" class="square"></div>
+                    <div id="8h" class="square"></div>
+                </div>
+                <div id="row7" class="row">
+                    <div id="7a" class="square"></div>
+                    <div id="7b" class="square"></div>
+                    <div id="7c" class="square"></div>
+                    <div id="7d" class="square"></div>
+                    <div id="7e" class="square"></div>
+                    <div id="7f" class="square"></div>
+                    <div id="7g" class="square"></div>
+                    <div id="7h" class="square"></div>
+                </div>
+                <div id="row6" class="row">
+                    <div id="6a" class="square"></div>
+                    <div id="6b" class="square"></div>
+                    <div id="6c" class="square"></div>
+                    <div id="6d" class="square"></div>
+                    <div id="6e" class="square"></div>
+                    <div id="6f" class="square"></div>
+                    <div id="6g" class="square"></div>
+                    <div id="6h" class="square"></div>
+                </div>
+                <div id="row5" class="row">
+                    <div id="5a" class="square"></div>
+                    <div id="5b" class="square"></div>
+                    <div id="5c" class="square"></div>
+                    <div id="5d" class="square"></div>
+                    <div id="5e" class="square"></div>
+                    <div id="5f" class="square"></div>
+                    <div id="5g" class="square"></div>
+                    <div id="5h" class="square"></div>
+                </div>
+                <div id="row4" class="row">
+                    <div id="4a" class="square"></div>
+                    <div id="4b" class="square"></div>
+                    <div id="4c" class="square"></div>
+                    <div id="4d" class="square"></div>
+                    <div id="4e" class="square"></div>
+                    <div id="4f" class="square"></div>
+                    <div id="4g" class="square"></div>
+                    <div id="4h" class="square"></div>
+                </div>
+                <div id="row3" class="row">
+                    <div id="3a" class="square"></div>
+                    <div id="3b" class="square"></div>
+                    <div id="3c" class="square"></div>
+                    <div id="3d" class="square"></div>
+                    <div id="3e" class="square"></div>
+                    <div id="3f" class="square"></div>
+                    <div id="3g" class="square"></div>
+                    <div id="3h" class="square"></div>
+                </div>
+                <div id="row2" class="row">
+                    <div id="2a" class="square"></div>
+                    <div id="2b" class="square"></div>
+                    <div id="2c" class="square"></div>
+                    <div id="2d" class="square"></div>
+                    <div id="2e" class="square"></div>
+                    <div id="2f" class="square"></div>
+                    <div id="2g" class="square"></div>
+                    <div id="2h" class="square"></div>
+                </div>
+                <div id="row1" class="row">
+                    <div id="1a" class="square"></div>
+                    <div id="1b" class="square"></div>
+                    <div id="1c" class="square"></div>
+                    <div id="1d" class="square"></div>
+                    <div id="1e" class="square"></div>
+                    <div id="1f" class="square"></div>
+                    <div id="1g" class="square"></div>
+                    <div id="1h" class="square"></div>
+                </div>
+            </div>
+            <div id="info">
+
+            </div>
+        </div>
     </body>
 </html>
